--- a/app-html/index.html
+++ b/app-html/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <script src="libs/avatar/index.js"></script>
+  <script type="module" src="libs/avatar/index.js"></script>
 </head>
 
 <body>
