--- a/avatar-svelte/public/index.html
+++ b/avatar-svelte/public/index.html
@@ -6,9 +6,11 @@
 
 <body>
   <div style="width: 60px; height: 60px">
-    <af-avatar name="marge simpson" />
+    <af-avatar-svg name="marge simpson" />
   </div>
-  Marge simpson
+  <p>
+    <af-avatar-html name="homer simpson" />
+  </p>
 </body>
 
 </html>
