feat: integration avatar svg

--- a/avatar-svelte/public/index.html
+++ b/avatar-svelte/public/index.html
@@ -2,15 +2,17 @@
 
 <head>
   <script type="module" src="build/index.js"></script>
+  <link type="text/css" rel="stylesheet" href="index.css" />
 </head>
 
 <body>
-  <div style="width: 60px; height: 60px">
-    <af-avatar-svg name="marge simpson" />
+  <div class="content">
+    <af-avatar-svg name="homer simpson" size="50" />
+    <af-avatar-svg name="marge simpson" size="50" />
+    <!-- <p>
+      <af-avatar-html name="homer simpson" />
+    </p> -->
   </div>
-  <p>
-    <af-avatar-html name="homer simpson" />
-  </p>
 </body>
 
 </html>
