feat(TU) : test unitaire svelte

--- a/avatar-svelte/public/index.html
+++ b/avatar-svelte/public/index.html
@@ -7,9 +7,13 @@
 
 <body>
   <div class="content">
-    <af-avatar-svg name="homer simpson" size="50" />
-    <af-avatar-svg name="marge simpson" size="50" />
-    <!-- <p>
+    <af-avatar-svg name="Homer Simpson" size="50"></af-avatar-svg>
+    <af-avatar-svg name="Marge Simpson" size="50"></af-avatar-svg>
+    <af-avatar-svg name="Bart Simpson" size="50"></af-avatar-svg>
+    <af-avatar-svg name="Lisa Simpson" size="50"></af-avatar-svg>
+    <af-avatar-svg name="Maggie Simpson" size="50">
+      </af-avatar>
+      <!-- <p>
       <af-avatar-html name="homer simpson" />
     </p> -->
   </div>
